<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".BirthdayNextFragment">

    <TextView
        android:id="@+id/tv_bday_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/whose_birthday_is_next"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/tv_other_bday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="31dp"
        android:text="@string/check_other_birthdays"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_closest_name" />

    <TextView
        android:id="@+id/tv_title_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="57dp"
        android:text="@string/closest_birthday"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bday_title" />

    <TextView
        android:id="@+id/tv_closest_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="29dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/tv_title_close"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_close" />

    <TextView
        android:id="@+id/tv_closest_bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="29dp"
        android:text="@string/bday"
        app:layout_constraintStart_toEndOf="@+id/tv_title_close"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_close" />

    <TextView
        android:id="@+id/tv_how_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:text="@string/days_until"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_closest_bday"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="67dp"
        android:text="@string/bday_"
        app:layout_constraintEnd_toStartOf="@+id/tv_when"
        app:layout_constraintStart_toEndOf="@+id/sp_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_other_bday_title" />

    <TextView
        android:id="@+id/tv_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:text="@string/days_until_s"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_bday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bday" />

    <Spinner
        android:id="@+id/sp_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/choose_a_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_bday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_other_bday_title" />

</androidx.constraintlayout.widget.ConstraintLayout>